<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoniveles"
    android:foregroundTint="#00FFFFFF"
    tools:context=".NivelFinal">

    <TextView
        android:id="@+id/textView_intentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/intentos"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/player"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="90dp"
        android:text="@string/puntuaci_n_0"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_corazones"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/textView_intentos"
        android:contentDescription="@string/intentos_restantes"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageView_num1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/numero1"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_num2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/numero2"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/imageView_num2"
        android:layout_toEndOf="@+id/imageView_num1"
        android:contentDescription="@string/signo_matematico"
        app:srcCompat="@drawable/multiplicacion" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:autofillHints=""
        android:backgroundTint="#FDE62B2B"
        android:ems="10"
        android:hint="@string/respuesta"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textColorHint="#9FE53935"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton_check"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="222dp"
        android:layout_toEndOf="@+id/editTextNumber"
        android:backgroundTint="@android:color/holo_green_light"
        android:contentDescription="@string/app_name"
        android:onClick="comparar"
        android:src="@android:drawable/checkbox_on_background" />


</RelativeLayout>